--- a/templates/table_view.html
+++ b/templates/table_view.html
@@ -22,16 +22,16 @@
             </tr>
         </thead>
         <tbody>
-            {% for row_inputs in row_html %}
-	        <tr data-id="{{ row_inputs[0][0].split('name="')[1].split('"')[0].split('_')[1] }}">
-                    {% for input_html in row_inputs %}
-                        <td data-label="{{ input_html[1]|e }}">{{ input_html[0]|safe }}</td>
-                    {% endfor %}
-                    <td>
-                        <button class="delete-entry" title="Eintrag löschen">Löschen</button>
-                    </td>
-                </tr>
-            {% endfor %}
+		{% for inputs, id in row_data %}
+			<tr data-id="{{ id }}">
+			    {% for input_html, label in inputs %}
+				<td>{{ input_html | safe }}</td>
+			    {% endfor %}
+			    <td>
+				<button class="delete-entry" title="Eintrag löschen">Löschen</button>
+			    </td>
+			</tr>
+		{% endfor %}
             <tr class="new-entry">
                 {% for input_html in new_entry_inputs %}
                     <td data-label="{{ input_html[1]|e }}">{{ input_html[0]|safe }}</td>
