aggregierte ansichten verlinkt

--- a/templates/aggregate_index.html
+++ b/templates/aggregate_index.html
@@ -30,6 +30,7 @@
 </head>
 <body>
     <h1>Aggregierte Ansichten</h1>
+    <a href="/">← zurück</a>
 
     <ul>
         <!-- Hier kannst du später beliebig weitere Aggregate‑Links ergänzen -->
