--- a/templates/aggregate_view.html
+++ b/templates/aggregate_view.html
@@ -68,6 +68,7 @@
 </head>
 <body>
     <h1>{{ title }}</h1>
+    <a href="/">← zurück</a>
 
     <div class="filter-box">
         <form method="get" action="{{ url_for('aggregate_transponder_view') }}">
