--- a/templates/index.html
+++ b/templates/index.html
@@ -38,5 +38,7 @@
             <li><a href="{{ url_for('table_view', table_name=table) }}">{{ table.capitalize() }}</a></li>
         {% endfor %}
     </ul>
+    <h1>Aggregate</h1>
+    <a href="/aggregate">Aggregierte Ansichten</a>
 </body>
 </html>
