--- a/templates/index.html
+++ b/templates/index.html
@@ -32,13 +32,14 @@
     </style>
 </head>
 <body>
-    <h1>Tabellen</h1>
+    <h1>Aggregate</h1>
+    <a href="/aggregate">Aggregierte Ansichten</a>
+
+    <h1>Stammdatentabellen</h1>
     <ul>
         {% for table in tables %}
             <li><a href="{{ url_for('table_view', table_name=table) }}">{{ table.capitalize() }}</a></li>
         {% endfor %}
     </ul>
-    <h1>Aggregate</h1>
-    <a href="/aggregate">Aggregierte Ansichten</a>
 </body>
 </html>
