--- a/templates/aggregate_index.html
+++ b/templates/aggregate_index.html
@@ -34,6 +34,7 @@
 
     <ul>
         <!-- Hier kannst du später beliebig weitere Aggregate‑Links ergänzen -->
+        <li><a href="{{ url_for('aggregate_inventory_view') }}">Inventar</a></li>
         <li><a href="{{ url_for('aggregate_transponder_view') }}">Ausgegebene Transponder</a></li>
     </ul>
 </body>
