--- a/templates/person_wizard.html
+++ b/templates/person_wizard.html
@@ -22,6 +22,7 @@
 </head>
 <body class="p-4">
     <div class="container">
+        <a href="/wizard/">← zurück</a><br><br><br>
         <h1>Person anlegen</h1>
         <form method="post" id="person-form">
             <div class="mb-3">
