--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,9 @@
     </style>
 </head>
 <body>
+    <h1>Wizards</h1>
+    <a href="/wizard">Wizards</a>
+
     <h1>Aggregate</h1>
     <a href="/aggregate">Aggregierte Ansichten</a>
 
