--- a/templates/wizard_index.html
+++ b/templates/wizard_index.html
@@ -7,6 +7,7 @@
 </head>
 <body class="p-4">
     <div class="container">
+        <a href="/">← zurück</a><br><br><br>
         <h1>Verfügbare Wizards</h1>
         <ul class="list-group">
             {% for route in wizard_routes %}
