--- a/templates/index.html
+++ b/templates/index.html
@@ -4,32 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Datenbank Tabellen</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 2em;
-            background: #f9f9f9;
-            color: #333;
-        }
-        h1 {
-            margin-bottom: 1em;
-        }
-        ul {
-            list-style: none;
-            padding-left: 0;
-        }
-        li {
-            margin-bottom: 0.5em;
-        }
-        a {
-            text-decoration: none;
-            color: #007bff;
-            font-weight: 600;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <h1>Wizards</h1>
