--- a/templates/person_wizard.html
+++ b/templates/person_wizard.html
@@ -5,7 +5,7 @@
     <title>Person Wizard</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
-	<link href="static/style.html" rel="stylesheet" />
+	<link href="static/style.css" rel="stylesheet" />
 </head>
 <body class="p-4">
     <div class="container">
