--- a/templates/table_view.html
+++ b/templates/table_view.html
@@ -5,9 +5,7 @@
     <title>{{ table_name|capitalize }} - Datenbank Editor</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-    <style>
-        {{ style_css|safe }}
-    </style>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
     <h2>{{ table_name|capitalize }}</h2>
