--- a/templates/aggregate_index.html
+++ b/templates/aggregate_index.html
@@ -3,30 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Aggregierte Ansichten</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            margin-top: 0;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            margin: 8px 0;
-        }
-        a {
-            text-decoration: none;
-            color: #0066cc;
-        }
-        a:hover, a:focus {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
     <h1>Aggregierte Ansichten</h1>
