--- a/templates/wizard_index.html
+++ b/templates/wizard_index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Wizard Übersicht</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../static/style.css">
 </head>
-<body class="p-4">
-    <div class="container">
-        <a href="/">← zurück</a><br><br><br>
+<body>
+        <a href="/">← zurück</a>
         <h1>Verfügbare Wizards</h1>
         <ul class="list-group">
             {% for route in wizard_routes %}
@@ -18,6 +17,5 @@
                 <li class="list-group-item text-muted">Keine Wizards gefunden.</li>
             {% endfor %}
         </ul>
-    </div>
 </body>
 </html>
