--- a/templates/person_wizard.html
+++ b/templates/person_wizard.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <title>Person Wizard</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="../static/style.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
 	<link href="static/style.css" rel="stylesheet" />
 </head>
-<body class="p-4">
-    <div class="container">
+<body>
         <a href="/wizard">← zurück</a><br><br><br>
         <h1>Person anlegen</h1>
         <form method="post" id="person-form">
@@ -39,7 +39,6 @@
             <hr />
             <button type="submit" class="btn btn-primary">Person speichern</button>
         </form>
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
