--- a/templates/person_wizard.html
+++ b/templates/person_wizard.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Person Wizard</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="../static/bootstrap.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="../static/style.css">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
-	<link href="static/style.css" rel="stylesheet" />
+	<link href="../static/toastr.min.css" rel="stylesheet" />
+	<link href="../static/style.css" rel="stylesheet" />
 </head>
 <body>
         <a href="/wizard">← zurück</a><br><br><br>
