--- a/templates/person_wizard.html
+++ b/templates/person_wizard.html
@@ -40,8 +40,8 @@
             <button type="submit" class="btn btn-primary">Person speichern</button>
         </form>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="../static/jquery-3.6.0.min.js"></script>
+    <script src="../static/toastr.min.js"></script>
     <script>
         function createContactRow() {
             return $(`
