added jquery min

--- a/templates/person_wizard.html
+++ b/templates/person_wizard.html
@@ -40,7 +40,7 @@
             <button type="submit" class="btn btn-primary">Person speichern</button>
         </form>
 
-    <script src="../static/jquery-3.6.0.min.js"></script>
+    <script src="../static/jquery.min.js"></script>
     <script src="../static/toastr.min.js"></script>
     <script>
         function createContactRow() {
