--- a/templates/table_view.html
+++ b/templates/table_view.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ table_name|capitalize }} - Datenbank Editor</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <link rel="stylesheet" href="../static/toastr.min.css">
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
@@ -50,8 +50,8 @@
     </table>
 {% endif %}
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="../static/jquery.min.js"></script>
+    <script src="../static/toastr.min.js"></script>
     <script>
         {{ javascript_code|safe }}
     </script>
