--- a/Test/static/style.css
+++ b/Test/static/style.css
@@ -84,3 +84,15 @@ html, body {
     padding: 5px 10px;
     display: none;
 }
+
+.snapzone {
+  border-radius: 6px;
+  border: 1px solid rgba(0,0,0,0.2);
+  transition: box-shadow 0.3s ease;
+  
+  /* Wichtig für Snapping: */
+  pointer-events: none;
+  
+  /* Farben mit Transparenz, damit man sie sieht */
+  background-color: rgba(0, 0, 255, 0.2);
+}
