--- a/templates/index.html
+++ b/templates/index.html
@@ -19,5 +19,8 @@
             <li><a href="{{ url_for('table_view', table_name=table) }}">{{ table.capitalize() }}</a></li>
         {% endfor %}
     </ul>
+
+    <h1>Map-Editor</h2>
+    <a href="/map-editor">Map-Editor</a>
 </body>
 </html>
