--- a/templates/map_editor.html
+++ b/templates/map_editor.html
@@ -4,13 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Raum- und Snapzone Editor</title>
+    <link rel="stylesheet" href="static/style.css">
 <style>
-  body, html {
-    margin: 0; padding: 0; height: 100%;
-    font-family: Arial, sans-serif;
-    background: #f0f0f0;
-    user-select: none;
-  }
   #container {
     position: relative;
     width: 1100px;
