--- a/templates/map_editor.html
+++ b/templates/map_editor.html
@@ -20,7 +20,10 @@
 			<button id="cancel-draw-btn" disabled>Abbrechen</button>
 		</div>
 
-		<div id="container"></div>
+		<div id="container">
+			<img id="floorplan" src="/static/sechste_etage.png" alt="Etagenplan">
+			<div id="overlay"></div>
+		</div>
 
 		<pre id="output">// Räume und Snapzones werden hier angezeigt</pre>
 
