--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-<!-- templates/index.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -8,7 +7,11 @@
 </head>
 <body>
     <h1>Wizards</h1>
-    <a href="/wizard">Wizards</a>
+    <ul>
+        {% for route in wizard_routes %}
+            <li><a href="{{ route }}">{{ route.replace('/wizard/', '').capitalize() }}</a></li>
+        {% endfor %}
+    </ul>
 
     <h1>Aggregate</h1>
     <a href="/aggregate">Aggregierte Ansichten</a>
@@ -20,7 +23,7 @@
         {% endfor %}
     </ul>
 
-    <h1>Map-Editor</h2>
+    <h1>Map-Editor</h1>
     <a href="/map-editor">Map-Editor</a>
 </body>
 </html>
