--- a/templates/person_wizard.html
+++ b/templates/person_wizard.html
@@ -9,7 +9,7 @@
 	<link href="../static/style.css" rel="stylesheet" />
 </head>
 <body>
-        <a href="/wizard">← zurück</a><br><br><br>
+        <a href="/">← zurück</a><br><br><br>
         <h1>Person anlegen</h1>
         <form method="post" id="person-form">
             <div class="mb-3">
