--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Datenbank Übersicht</h1>
+    <h1>Datenbank</h1>
 
     <div class="tabs">
         <div class="tab-button active" data-tab="tab-wizards">Wizards</div>
