--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="tabs">
         <div class="tab-button active" data-tab="tab-wizards">Wizards</div>
         <div class="tab-button" data-tab="tab-aggregate">Aggregate</div>
-        <div class="tab-button" data-tab="tab-tables">Stammdaten</div>
+        <div class="tab-button" data-tab="tab-tables">Tabellen</div>
         <div class="tab-button" data-tab="tab-map">Map-Editor</div>
     </div>
 
